syntax = "proto3";

package main;
option go_package = "./";

service CurrencyService {
  rpc Convert(ConvertRequest) returns (ConvertResponse) {}
}

message ConvertRequest {
  string baseCurrency = 1;
  repeated string targetCurrencies = 2;
}

message ConvertResponse {
  string baseCurrency = 1;
  map<string,double> rates = 2;
}